firebaseAuth containing correct env variables

--- a/src/sass_files/_variable.scss
+++ b/src/sass_files/_variable.scss
@@ -1,5 +1,6 @@
-$primary-color: rgba(27, 101, 246, 1);
-$body-text-color: rgba(150, 163, 187, 1);
+// $color-primary: rgba(27, 101, 246, 1);
+$color-primary: white;
+$color-grey-light: rgba(150, 163, 187, 1);
 $danger-color: rgba(208, 21, 46, 1);
 $header-height: 50px;
 $screen-sm: 768px;
