--- a/src/sass_files/_variable.scss
+++ b/src/sass_files/_variable.scss
@@ -1,7 +1,8 @@
 // $color-primary: rgba(27, 101, 246, 1);
-$color-primary: white;
+$color-primary: rgb(26, 134, 235);
 $color-grey-light: rgba(150, 163, 187, 1);
 $danger-color: rgba(208, 21, 46, 1);
+$body-text-color: rgba(87, 59, 59, 0);
 $header-height: 50px;
 $screen-sm: 768px;
 $screen-md: 992px;
