--- a/src/sass_files/components/_authentication.scss
+++ b/src/sass_files/components/_authentication.scss
@@ -1,4 +1,12 @@
 .authentication-img {
-  width: 50rem;
-  height: 50rem;
+  height: 60vh;
+}
+
+.create-account {
+  cursor: pointer;
+}
+
+.google-sign-in-logo {
+  // width: 10rem;
+  height: 3rem;
 }
