--- a/src/sass_files/main.scss
+++ b/src/sass_files/main.scss
@@ -1,6 +1,9 @@
 @import "./components/home";
-@import "./components//homeForm";
 @import "./variable";
+@import "./components/home-form";
 @import "./base";
 @import "./components/authentication";
+@import "./components/left_part_home";
+@import "./components/home-uploading";
+@import "./components/panel";
 // @import "./components/topBar";
