--- a/src/sass_files/components/_home.scss
+++ b/src/sass_files/components/_home.scss
@@ -1,17 +1,68 @@
 .home-row-1 {
-    height: 20vh;
+  height: 20vh;
+  margin-bottom: 1rem;
 }
 
 .home-row-2 {
-    height: 80vh;
+  height: 60vh;
+  box-shadow: 0 0.5rem 0.5rem rgba($color: #000000, $alpha: 0.5);
+  position: relative;
+  z-index: 1;
 }
 
 .errorDialog {
-    padding: 1rem 0 1rem 1rem;
-    background-color: #FF8A80;
-    box-shadow: 0 .2rem .2rem rgba($color: #000000
-    , $alpha: .3);
-    color: white;
-    font-weight: 500;
-    font-size: 1.5rem;
+  padding: 1rem 0 1rem 1rem;
+  background-color: #ff8a80;
+  box-shadow: 0 0.2rem 0.2rem rgba($color: #000000, $alpha: 0.3);
+  color: white;
+  font-weight: 500;
+  font-size: 1.5rem;
 }
+
+
+.cross-button {
+    position: absolute;
+    right: .8%;
+    top: -1%;
+    color: #888;
+    font-size: 2rem;
+    padding: 0;
+    cursor: pointer;
+
+    &:hover {
+        color: black;
+        
+    }
+}
+
+.chip {
+    display: inline-block;
+    padding: 0 15px;
+    height: 25px;
+    font-size: 10px;
+    border-radius: 50px;
+    background-color: #f1f1f1;
+  
+    &__filename {
+        width: 60px;
+        text-align: center;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+  
+    &__more-files {
+      cursor: pointer;
+    }
+  }
+  
+  .closebtn {
+      color: #888;
+      font-weight: bold;
+      cursor: pointer;
+      font-size: 15px;
+    }
+    
+    .closebtn:hover {
+      color: #000;
+    }
