--- a/src/sass_files/style.css
+++ b/src/sass_files/style.css
@@ -1,19 +1,87 @@
 .home-row-1 {
-  height: 20vh; }
+  height: 20vh;
+  margin-bottom: 1rem; }
 
 .home-row-2 {
-  height: 80vh; }
+  height: 60vh;
+  box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.5);
+  position: relative;
+  z-index: 1; }
 
 .errorDialog {
   padding: 1rem 0 1rem 1rem;
-  background-color: #FF8A80;
+  background-color: #ff8a80;
   box-shadow: 0 0.2rem 0.2rem rgba(0, 0, 0, 0.3);
   color: white;
   font-weight: 500;
   font-size: 1.5rem; }
 
-.home-form-container {
-  background-color: orangered; }
+.cross-button {
+  position: absolute;
+  right: .8%;
+  top: -1%;
+  color: #888;
+  font-size: 2rem;
+  padding: 0;
+  cursor: pointer; }
+  .cross-button:hover {
+    color: black; }
+
+.chip {
+  display: inline-block;
+  padding: 0 15px;
+  height: 25px;
+  font-size: 10px;
+  border-radius: 50px;
+  background-color: #f1f1f1; }
+  .chip__filename {
+    width: 60px;
+    text-align: center;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap; }
+  .chip__more-files {
+    cursor: pointer; }
+
+.closebtn {
+  color: #888;
+  font-weight: bold;
+  cursor: pointer;
+  font-size: 15px; }
+
+.closebtn:hover {
+  color: #000; }
+
+.home-form-card {
+  height: 60vh; }
+
+.file-container {
+  overflow: hidden; }
+
+.chip {
+  display: inline-block;
+  padding: 0 15px;
+  height: 25px;
+  font-size: 10px;
+  border-radius: 50px;
+  background-color: #f1f1f1; }
+  .chip__filename {
+    width: 60px;
+    text-align: center;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap; }
+  .chip__more-files {
+    cursor: pointer; }
+
+.closebtn {
+  color: #888;
+  font-weight: bold;
+  cursor: pointer;
+  font-size: 15px; }
+
+.closebtn:hover {
+  color: #000; }
 
 *,
 *::before,
@@ -25,13 +93,12 @@
 html {
   height: 100vh;
   width: 100vw;
-  box-sizing: border-box;
-  font-size: 62.5%; }
+  font-size: 67.5%;
+  box-sizing: border-box; }
 
 body {
   width: 100%;
-  height: 100%;
-  background-color: white; }
+  height: 100%; }
 
 #root {
   width: 100%;
@@ -41,6 +108,186 @@ body {
   width: 100%;
   height: 100%; }
 
+.video-div {
+  position: relative; }
+
+.video-background {
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  height: 100vh;
+  width: 100vw;
+  object-fit: cover;
+  opacity: 0.5;
+  z-index: -1; }
+
+@media screen and (min-width: 768px) {
+  html {
+    font-size: 12px; } }
+
+@media screen and (min-width: 1024px) {
+  html {
+    font-size: 14px; } }
+
+/* @media (min-width: 1280px) {
+  html{font-size: 14px;}
+} */
 .authentication-img {
-  width: 50rem;
-  height: 50rem; }
+  height: 60vh; }
+
+.create-account {
+  cursor: pointer; }
+
+.google-sign-in-logo {
+  height: 3rem; }
+
+.app-card {
+  height: 60vh;
+  overflow: hidden;
+  position: relative;
+  background: #ffffff;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  /*  @media (min-width: $screen-sm) {
+      width: 350px;
+    } */ }
+  .app-card .app-card-header {
+    background: #f3f7ff; }
+    .app-card .app-card-header .app-card-header-inner {
+      padding: 10px 20px; }
+  .app-card .app-card-content .app-card-content-inner {
+    padding: 20px; }
+  .app-card.app-card-uploading .app-card-content .app-card-content-inner, .app-card.app-card-upload-sent .app-card-content .app-card-content-inner {
+    padding: 40px; }
+
+.app-home-upload-sent-icon {
+  display: block;
+  text-align: center; }
+  .app-home-upload-sent-icon i {
+    font-size: 50px;
+    display: inline-block;
+    border: 1px solid rgba(87, 59, 59, 0);
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    line-height: 100px; }
+
+.app-upload-files-total {
+  margin-top: 20px; }
+
+.app-upload-stats {
+  display: flex;
+  flex-direction: row; }
+  .app-upload-stats .app-upload-stats-left {
+    flex-grow: 1; }
+
+.app-progress {
+  background: #f1f8fe;
+  border: 1px solid #b2d8f8;
+  height: 15px;
+  line-height: 15px;
+  width: 100%;
+  border-radius: 10px;
+  margin: 10px 0 10px 0;
+  position: relative;
+  overflow: hidden; }
+  .app-progress .app-progress-bar {
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0px;
+    height: 15px;
+    line-height: 15px;
+    background: #1a86eb; }
+
+.app-upload-cancel-button {
+  margin-top: 50px; }
+
+.app-text-center {
+  text-align: center; }
+
+.app-upload-sent-message h2 {
+  font-size: 25px;
+  font-weight: 400;
+  padding: 0;
+  margin: 20px 0; }
+
+.app-upload-sent-message p {
+  line-height: 1.5em; }
+
+.app-upload-sent-actions {
+  margin: 20px 0; }
+  .app-upload-sent-actions button {
+    margin: 10px 0; }
+
+.app-upload-cancel-button {
+  margin-top: 50px; }
+
+.app-text-center {
+  text-align: center; }
+
+.app-upload-sent-message h2 {
+  font-size: 25px;
+  font-weight: 400;
+  padding: 0;
+  margin: 20px 0; }
+
+.app-upload-sent-message p {
+  line-height: 1.5em; }
+
+.app-upload-sent-actions {
+  margin: 20px 0; }
+  .app-upload-sent-actions button {
+    margin: 10px 0; }
+
+.app-upload-cancel-button {
+  margin-top: 50px; }
+
+.app-form-actions .app-button {
+  width: 100%;
+  text-align: center;
+  display: block;
+  font-weight: 800;
+  color: #1a86eb;
+  border: 1px solid #1a86eb;
+  background: #ffffff;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  padding: 10px 15px;
+  text-transform: uppercase; }
+  .app-form-actions .app-button.primary {
+    background: #1a86eb;
+    color: #ffffff; }
+  .app-form-actions .app-button.app-button-link {
+    background: none;
+    border: 0 none;
+    color: #1a86eb; }
+
+.app-form-actions button {
+  margin: 10px 0; }
+
+.app-home-uploading-icon {
+  text-align: center; }
+
+.panel {
+  position: absolute;
+  left: 15%;
+  top: -10%;
+  height: 120%;
+  width: 60%;
+  background-color: white;
+  z-index: 1000;
+  box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.5); }
+  .panel__filename {
+    font-size: 1.5rem;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis; }
+  .panel__close-button {
+    font-size: 20px;
+    color: grey;
+    cursor: pointer; }
+    .panel__close-button:hover {
+      color: black; }
