--- a/src/sass_files/components/_authentication.scss
+++ b/src/sass_files/components/_authentication.scss
@@ -1,6 +1,3 @@
-.authentication-img {
-  height: 60vh;
-}
 
 .create-account {
   cursor: pointer;
@@ -9,4 +6,28 @@
 .google-sign-in-logo {
   // width: 10rem;
   height: 3rem;
+}
+
+.sign-in__form {
+  max-height: 60vh;
+}
+
+.display-5 {
+  font-size: $display-5;
+}
+
+.display-6 {
+  font-size: $display-6;
+}
+
+.heading, .title {
+  transition: all .2s ease-in;
+}
+
+.input-height {
+  height: 2rem !important;
+}
+
+.create-account {
+  font-weight: 600;
 }
