--- a/src/sass_files/main.scss
+++ b/src/sass_files/main.scss
@@ -3,7 +3,7 @@
 @import "./components/home-form";
 @import "./base";
 @import "./components/authentication";
-@import "./components/left_part_home";
+@import "./components/home-left";
 @import "./components/home-uploading";
 @import "./components/panel";
 // @import "./components/topBar";
