fix: renamed react files.

--- a/src/sass_files/components/_home-form.scss
+++ b/src/sass_files/components/_home-form.scss
@@ -6,6 +6,16 @@
    overflow: hidden;
 }
 
+.form {
+  &__container {
+    height: 100%;
+
+    form {
+      height: inherit;
+    }
+  }
+}
+
 .chip {
   display: inline-block;
   padding: 0 15px;
