--- a/src/sass_files/components/_home.scss
+++ b/src/sass_files/components/_home.scss
@@ -1,9 +1,4 @@
-.home-row-1 {
-  height: 20vh;
-  margin-bottom: 1rem;
-}
-
-.home-row-2 {
+.main-box {
   height: 60vh;
   box-shadow: 0 0.5rem 0.5rem rgba($color: #000000, $alpha: 0.5);
   position: relative;
