--- a/src/sass_files/main.scss
+++ b/src/sass_files/main.scss
@@ -6,4 +6,5 @@
 @import "./components/home-left";
 @import "./components/home-uploading";
 @import "./components/panel";
+@import "./components/app";
 // @import "./components/topBar";
