feat: Icon created, added in HomeUploadSent.

--- a/src/sass_files/main.scss
+++ b/src/sass_files/main.scss
@@ -7,4 +7,5 @@
 @import "./components/home-uploading";
 @import "./components/panel";
 @import "./components/app";
+@import "./components/topPart";
 // @import "./components/topBar";
