feat: ViewFile ui improved.

--- a/src/sass_files/main.scss
+++ b/src/sass_files/main.scss
@@ -1,3 +1,4 @@
+@import "./components/mixins";
 @import "./components/home";
 @import "./variable";
 @import "./components/home-form";
@@ -8,4 +9,5 @@
 @import "./components/panel";
 @import "./components/app";
 @import "./components/topPart";
+@import "./components/viewFile";
 // @import "./components/topBar";
