--- a/src/sass_files/components/_home.scss
+++ b/src/sass_files/components/_home.scss
@@ -1,8 +1,5 @@
 .main-box {
-  height: 60vh;
-  box-shadow: 0 0.5rem 0.5rem rgba($color: #000000, $alpha: 0.5);
-  position: relative;
-  z-index: 1;
+  @include box;
 }
 
 .errorDialog {
