--- a/src/sass_files/components/_app.scss
+++ b/src/sass_files/components/_app.scss
@@ -8,17 +8,32 @@
     height: 100%;
   }
   
-  .app__video-div {
+  .app__main {
     position: relative;
+  }
+
+  .app__video-div {
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
+    z-index: -1;
+
+    &:before {
+      content: '';
+      position: absolute;
+      background: rgba(0, 0, 0, 1);
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+    }
   }
   
   .video-background {
     position: absolute;
-    top: 0%;
-    left: 0%;
-    height: 100vh;
-    width: 100vw;
+    display: block;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
-    opacity: 0.5;
-    z-index: -1;
+    opacity: 0.9;
   }
