--- a/src/sass_files/style.css
+++ b/src/sass_files/style.css
@@ -290,18 +290,30 @@ body {
   width: 100%;
   height: 100%; }
 
-.app__video-div {
+.app__main {
   position: relative; }
+
+.app__video-div {
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  z-index: -1; }
+  .app__video-div:before {
+    content: '';
+    position: absolute;
+    background: black;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0; }
 
 .video-background {
   position: absolute;
-  top: 0%;
-  left: 0%;
-  height: 100vh;
-  width: 100vw;
+  display: block;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
-  opacity: 0.5;
-  z-index: -1; }
+  opacity: 0.9; }
 
 .paper-plane-icon {
   cursor: pointer; }
