--- a/src/sass_files/style.css
+++ b/src/sass_files/style.css
@@ -254,6 +254,10 @@ body {
 .app-home-uploading-icon {
   text-align: center; }
 
+.app-card__error-card {
+  border: 1px solid red;
+  color: red; }
+
 .panel {
   position: absolute;
   left: 0%;
