--- a/src/sass_files/style.css
+++ b/src/sass_files/style.css
@@ -341,7 +341,14 @@ body {
 
 .app-download-file-list {
   margin: 30px 0;
-  overflow-y: auto; }
+  overflow-y: auto;
+  position: relative; }
+  .app-download-file-list .progress-bar {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    z-index: 100;
+    background-color: transparent; }
   .app-download-file-list .app-download-file-list-item {
     border-bottom: 1px solid #e3eaf8;
     padding: 10px 5px;
@@ -351,3 +358,8 @@ body {
     .app-download-file-list .app-download-file-list-item .download-action a {
       color: #1a86eb;
       text-decoration: none; }
+
+.app-download-actions a {
+  text-decoration: none; }
+  .app-download-actions a:hover {
+    text-decoration: none; }
