--- a/src/sass_files/components/_topPart.scss
+++ b/src/sass_files/components/_topPart.scss
@@ -1,3 +1,30 @@
 .paper-plane-icon {
-    cursor: pointer;
+  cursor: pointer;
 }
+
+.settings {
+  position: absolute;
+  right: 1rem;
+  top: 1rem;
+  cursor: pointer;
+  
+  &:hover {
+    transition: all 0.2s ease-in;
+    transform: rotate(-20deg);
+  }
+
+  &:not(:hover) {
+    transition: all 0.2s ease-in;
+    transform: rotate(20deg);
+  }
+}
+
+.settings__panel {
+    position: absolute;
+    right: 2rem;
+    top: 5rem;
+    height: 15rem;
+    width: 10rem;
+    background-color: $color-grey-light;
+    z-index: $z-index-settings-panel;
+  }
