--- a/src/sass_files/components/_authentication.scss
+++ b/src/sass_files/components/_authentication.scss
@@ -1,3 +1,7 @@
+.authentication-div {
+  position: relative;
+}
+
 .create-account {
   cursor: pointer;
 }
@@ -29,4 +33,12 @@
 
 .create-account {
   font-weight: 600;
+}
+
+.authentication__progress-bar {
+  position: absolute;
+  width: 3rem;
+  height: 3rem;
+  top: 50%;
+  left: 50%;
 }
