feat: added drag and drop feature.

--- a/src/sass_files/_variable.scss
+++ b/src/sass_files/_variable.scss
@@ -1,6 +1,7 @@
 // $color-primary: rgba(27, 101, 246, 1);
 $color-primary: rgb(26, 134, 235);
 $color-grey-light: #cce2f3;
+$color-grey-light-1: #c1d1ddd0;
 $danger-color: rgba(208, 21, 46, 1);
 $body-text-color: rgba(87, 59, 59, 0);
 $header-height: 50px;
