--- a/src/sass_files/style.css
+++ b/src/sass_files/style.css
@@ -65,6 +65,24 @@
   margin: 0;
   border-bottom: 1px solid #cce2f3; }
 
+.dropzone__section {
+  position: relative;
+  background-color: #c1d1ddd0; }
+
+.dropzone__main {
+  position: relative;
+  height: 100%;
+  width: 100%; }
+
+.dropzone__text {
+  position: absolute;
+  font-size: 20px; }
+
+.dropzone__icon {
+  position: absolute;
+  text-align: center;
+  transition: all .5s; }
+
 *,
 *::before,
 *::after {
