--- a/src/sass_files/style.css
+++ b/src/sass_files/style.css
@@ -27,8 +27,17 @@
   height: 60vh; }
 
 .file-container {
-  padding: 10px 5px;
+  padding: 1rem 0.5rem;
   overflow: hidden; }
+  .file-container__separator {
+    width: 100%;
+    height: 2px;
+    padding: 0;
+    margin: 0;
+    background-color: #cce2f3; }
+
+.chips__and__form {
+  height: 100%; }
 
 .form__container {
   height: 100%; }
@@ -37,7 +46,6 @@
 
 .chip {
   padding: 0 15px;
-  margin-bottom: 10px;
   height: 25px;
   font-size: 10px;
   border-radius: 50px;
@@ -60,11 +68,6 @@
 .closebtn:hover {
   color: #000; }
 
-.file-container__separator {
-  padding: 0;
-  margin: 0;
-  border-bottom: 1px solid #cce2f3; }
-
 .dropzone__section {
   position: relative;
   background-color: #c1d1ddd0; }
@@ -81,7 +84,7 @@
 .dropzone__icon {
   position: absolute;
   text-align: center;
-  transition: all .5s; }
+  transition: all 0.5s; }
 
 *,
 *::before,
