feat: settings componet added.

--- a/src/sass_files/main.scss
+++ b/src/sass_files/main.scss
@@ -10,4 +10,5 @@
 @import "./components/app";
 @import "./components/topPart";
 @import "./components/viewFile";
+@import "./components//settings";
 // @import "./components/topBar";
