feat: bg blurred, fonts added.

--- a/src/sass_files/_variable.scss
+++ b/src/sass_files/_variable.scss
@@ -1,9 +1,9 @@
 // $color-primary: rgba(27, 101, 246, 1);
-$color-primary: rgb(26, 134, 235);
+$color-primary: #1a86eb;
 $color-grey-light: #cce2f3;
 $color-grey-light-1: #c1d1ddd0;
-$danger-color: rgba(208, 21, 46, 1);
-$body-text-color: rgba(87, 59, 59, 0);
+$danger-color: #d0152e;
+$body-text-color: #f7f1f1fa;
 $header-height: 50px;
 $screen-sm: 768px;
 $screen-md: 992px;
