--- a/src/sass_files/style.css
+++ b/src/sass_files/style.css
@@ -185,7 +185,7 @@ body {
   .app-home-upload-sent-icon i {
     font-size: 50px;
     display: inline-block;
-    border: 1px solid rgba(87, 59, 59, 0);
+    border: 1px solid #f7f1f1fa;
     width: 100px;
     height: 100px;
     border-radius: 50%;
@@ -352,7 +352,8 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  opacity: 0.9; }
+  opacity: 0.9;
+  filter: blur(2px); }
 
 .paper-plane-icon {
   cursor: pointer; }
@@ -368,6 +369,9 @@ body {
   .settings:not(:hover) {
     transition: all 0.2s ease-in;
     transform: rotate(20deg); }
+
+h2, h3, .h1 {
+  color: #f7f1f1fa; }
 
 .main-box {
   height: 60vh;
