feat: progress bar shown upon referesh.

--- a/src/sass_files/_variable.scss
+++ b/src/sass_files/_variable.scss
@@ -2,6 +2,7 @@
 $color-primary: #1a86eb;
 $color-grey-light: #cce2f3;
 $color-grey-light-1: #c1d1ddd0;
+$color-dark: #0c0c0c;
 $danger-color: #d0152e;
 $body-text-color: #f7f1f1fa;
 $header-height: 50px;
