--- a/src/sass_files/components/_home.scss
+++ b/src/sass_files/components/_home.scss
@@ -26,3 +26,11 @@
         
     }
 }
+
+.progress-bar {
+  position: absolute;
+  left: 43%;
+  top: 45%;
+  z-index: 10001111;
+  background-color: transparent;
+}
