--- a/src/sass_files/style.css
+++ b/src/sass_files/style.css
@@ -13,7 +13,7 @@
     transition: all 0.2s ease-in;
     transform: rotate(20deg); }
 
-.h2-home-page, h3-home-page, .h1-heading {
+.h2-home-page, .h3-home-page, .h1-heading {
   color: #f7f1f1fa; }
 
 .main-box {
