--- a/src/sass_files/components/_app.scss
+++ b/src/sass_files/components/_app.scss
@@ -7,12 +7,8 @@
     width: 100%;
     height: 100%;
   }
-  
-  .app__main {
-    position: relative;
-  }
 
-  .app__video-div {
+  .app__cover-image {
     position: absolute;
     height: 100vh;
     width: 100vw;
@@ -29,7 +25,7 @@
     }
   }
   
-  .video-background {
+  .cover-image {
     position: absolute;
     display: block;
     width: 100%;
