--- a/src/sass_files/style.css
+++ b/src/sass_files/style.css
@@ -14,7 +14,7 @@
     transform: rotate(20deg); }
 
 .h2-home-page, .h3-home-page, .h1-heading {
-  color: #141313fa; }
+  color: #0f0e0efa; }
 
 .main-box {
   height: 60vh;
@@ -211,7 +211,7 @@ body {
   .app-home-upload-sent-icon i {
     font-size: 50px;
     display: inline-block;
-    border: 1px solid #141313fa;
+    border: 1px solid #0f0e0efa;
     width: 100px;
     height: 100px;
     border-radius: 50%;
@@ -355,15 +355,12 @@ body {
   width: 100%;
   height: 100%; }
 
-.app__main {
-  position: relative; }
-
-.app__video-div {
+.app__cover-image {
   position: absolute;
   height: 100vh;
   width: 100vw;
   z-index: -1; }
-  .app__video-div:before {
+  .app__cover-image:before {
     content: '';
     position: absolute;
     background: black;
@@ -372,7 +369,7 @@ body {
     bottom: 0;
     left: 0; }
 
-.video-background {
+.cover-image {
   position: absolute;
   display: block;
   width: 100%;
